2013-03-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.AODtoDPD_trf.py 
      - Remove the automated VOFinder set and lock from TOP DPDs
    * ValidateD3PD_trf.py
      - Add PhysVal_Photons.root to list of root files to merge
    * skeleton.ValidateD3PD_trf.py
      - Add JO fragment to activate in PhysVal_Photons.root
      - Add hooks for {pre/post}{Exec/Include}
    * tagging as PATJobTransforms-00-05-07

2013-02-27 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputNTUP_FTKIPFile to LODPK
    * Merging_trf.py Make the inputLogsFile optional for Hits merging
    * tagging as PATJobTransforms-00-05-06

2013-02-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add outputDAODM_HSG1File to LODPK
    * tagging as PATJobTransforms-00-05-05

2013-02-14  John Chapman  <John.Chapman@cern.ch>
	
	* tagging as PATJobTransforms-00-05-04
	* share/skeleton.MergeHIT.py - add code to configure DetFlags
	based on available SimHit containers. Should fix problems seen in
	merging of upgrade layout without the TRT and also AFII RTT jobs.

2013-02-07  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-03
	* proper python module structure
	* A python/__init__.py

2013-02-04  Sebastien Binet  <binet@cern.ch>

	* tagging as PATJobTransforms-00-05-02
	* adding wscript file for hwaf
	* A wscript

2013-01-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reintegrate PATJobTransforms-00-04-43-branch
    * Tagging as PATJobTransforms-00-05-01
    *** Trunk is now the main development branch again

2013-01-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * ProdSysDicTools.py Correct bad panda data format of HITS, changing to Hits
    * ArgDictTools.py 'a' tags should be interpreted from panda
    * Tagging as PATJobTransforms-00-04-43-01

2013-01-09 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * ArgDicTools.py Update to PyAMI client version 4